🏗️ arch: clean backend